third_party/WebKit/Source/WebCore/html/shadow/MediaControlRootElement.cpp
@@ -351,6 +351,8 @@ void MediaControlRootElement::playbackStopped()
     m_timeline->setPosition(m_mediaElement->currentTime());
     updateTimeDisplay();
     makeOpaque();
+    
+    m_mediaElement->stopHideFullscreenControlsTimer();
 }
 
 void MediaControlRootElement::updateTimeDisplay()
@@ -456,6 +458,11 @@ void MediaControlRootElement::showVolumeSlider()
 
     if (m_volumeSliderContainer)
         m_volumeSliderContainer->show();
+}
+
+bool MediaControlRootElement::shouldHideControls()
+{
+    return !m_panel->hovered();
 }
 
 const AtomicString& MediaControlRootElement::shadowPseudoId() const
