third_party/WebKit/Source/WebCore/html/shadow/MediaControlRootElement.h
@@ -97,6 +97,7 @@ public:
     void updateTimeDisplay();
     void updateStatusDisplay();
 
+    virtual bool shouldHideControls();
 private:
     MediaControlRootElement(HTMLMediaElement*);
 
